Fix image tag for 'hari besar' in kegiatan.html
Signed-off-by: lukmanireng <enerjiklukman@gmail.com>

--- a/kegiatan.html
+++ b/kegiatan.html
@@ -44,7 +44,7 @@
       <li>Kegiatan Ekstrakurikuler</li>
 	    <IMG SRC="extra.JPG" alt="extrakulikuler">
       <li>Peringatan Hari Besar Nasional dan Keagamaan</li>
-	  <IMG SRC="besar.JPG" alt="hari besar">
+	  <img src="besar.jpg" alt="hari besar">
     </ul>
   </main>
   <footer>© 2025 Kelompok wahid</footer>
