Fix image source case sensitivity in kegiatan.html
Signed-off-by: lukmanireng <enerjiklukman@gmail.com>

--- a/kegiatan.html
+++ b/kegiatan.html
@@ -36,13 +36,13 @@
     <ul>
       <li>
 	  Praktek Kerja Lapangan (PKL)</li>
-	 <IMG SRC="img/PKL2.JPG" alt="PKL">
+	 <img src="img/PKL2.jpg" alt="PKL">
       <li>Kunjungan Industri</li>
-	  <IMG SRC="img/KI.JPEG" alt="KI">
+	  <img src="img/KI.jpeg" alt="KI">
       <li>Ujikom</li>
-	  <IMG SRC="img/ujikom.JPG" alt="ujikom">
+	  <img sec="img/ujikom.jpg" alt="ujikom">
       <li>Kegiatan Ekstrakurikuler</li>
-	    <IMG SRC="extra.JPG" alt="extrakulikuler">
+	    <img src="extra.jpg" alt="extrakulikuler">
       <li>Peringatan Hari Besar Nasional dan Keagamaan</li>
 	  <img src="besar.jpg" alt="hari besar">
     </ul>
