Fix image tags in kegiatan.html
Signed-off-by: lukmanireng <enerjiklukman@gmail.com>

--- a/kegiatan.html
+++ b/kegiatan.html
@@ -36,11 +36,11 @@
     <ul>
       <li>
 	  Praktek Kerja Lapangan (PKL)</li>
-	 <img src="img/PKL2.jpg" alt="PKL">
+	 <img src="PKL2.jpg" alt="PKL">
       <li>Kunjungan Industri</li>
-	  <img src="img/KI.jpeg" alt="KI">
+	  <img src="KI.jpeg" alt="KI">
       <li>Ujikom</li>
-	  <img sec="img/ujikom.jpg" alt="ujikom">
+	  <img src="img/ujikom.jpg" alt="ujikom">
       <li>Kegiatan Ekstrakurikuler</li>
 	    <img src="extra.jpg" alt="extrakulikuler">
       <li>Peringatan Hari Besar Nasional dan Keagamaan</li>
