--- a/kegiatan.html
+++ b/kegiatan.html
@@ -40,7 +40,7 @@
       <li>Kunjungan Industri</li>
 	  <img src="KI.jpeg" alt="KI">
       <li>Ujikom</li>
-	  <img src="img/ujikom.jpg" alt="ujikom">
+	  <img src="ujikom.jpg" alt="ujikom">
       <li>Kegiatan Ekstrakurikuler</li>
 	    <img src="extra.jpg" alt="extrakulikuler">
       <li>Peringatan Hari Besar Nasional dan Keagamaan</li>
